[workspace]
resolver = "3"
members = [
  "crates/x402-axum",
  "examples/x402-axum-example",
  "crates/x402-reqwest",
  "examples/x402-reqwest-example",
  "crates/x402-rs",
]

[workspace.dependencies]
# Local crates
x402-axum = { path = "crates/x402-axum", version = "0.6.1" }
x402-rs = { path = "crates/x402-rs", version = "0.9.2" }
x402-reqwest = { path = "crates/x402-reqwest", version = "0.4.0" }
x402-actix = { path = "crates/x402-actix", version = "0.1.0" }

# Solana
solana-pubkey = "2.4.0"
solana-keypair = "2.2.3"
solana-signature = "2.3.0"
solana-message = "2.4.0"
solana-signer = "2.2.1"
solana-transaction = "2.2.3"
solana-commitment-config = { version = "2.2.1" }
solana-compute-budget-interface = "2.2.2"
solana-rpc-client = { version = "2.3.13" }
solana-rpc-client-api = { version = "2.3.13" }
solana-hash = "2.3.0"
solana-program-pack = "2.2.1"
solana-instruction = "2.3.0"
spl-token = { version = "8.0.0" }
spl-token-2022 = { version = "9.0.0" }
spl-associated-token-account = { version = "7.0.0" }
bincode = { version = "1.3.3" }
bs58 = "0.5"
