[workspace]
resolver = "3"
members = [
  "crates/x402-axum",
  "examples/x402-axum-example",
  "crates/x402-reqwest",
  "examples/x402-reqwest-example",
  "crates/x402-rs",
]

[workspace.dependencies]
# Local crates
x402-axum = { path = "crates/x402-axum", version = "0.6.1" }
x402-rs = { path = "crates/x402-rs", version = "0.9.2" }
x402-reqwest = { path = "crates/x402-reqwest", version = "0.4.0" }
x402-actix = { path = "crates/x402-actix", version = "0.1.0" }

# Solana
solana-pubkey = "3"
solana-keypair = "3"
solana-signature = "3"
solana-message = "3"
solana-signer = "3"
solana-transaction = "3"
solana-commitment-config = "3"
solana-compute-budget-interface = "3"
solana-rpc-client = "3"
solana-rpc-client-api = "3"
solana-hash = "3"
solana-program-pack = "3"
solana-instruction = "3"
spl-token-interface = "2"
spl-token-2022-interface = "2"
spl-associated-token-account-interface = "2"
bincode = "1"
bs58 = "0.5"

# Alloy
alloy-provider = "1.1.1"
alloy-primitives = "1.4.1"
alloy-rpc-client = "1.1.1"
alloy-rpc-types = "1.1.1"
alloy-network = "1.1.1"
alloy-contract = "1.1.1"
alloy-sol-types = "1.4.1"
alloy-dyn-abi = "1.4.1"
alloy-signer-local = "1.1.1"
alloy-transport = "1.1.1"
