[package]
name = "x402-actix"
version = "0.1.0"
edition = "2024"

[dependencies]
x402-rs = { version = "0.9", default-features = false }
url = { version = "2.5.4", features = ["serde"] }
serde_json = { version = "1.0.140" }
reqwest = { version = "0.12.15" }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = { version = "2.0.12" }
http = { version = "1.3.1" }