[package]
name = "x402-reqwest"
version = "0.4.0"
edition = "2024"
description = "Wrapper for reqwest for transparent x402 payments"
license = "Apache-2.0"
authors = ["Sergey Ukustov <sergey@ukstv.me>"]
repository = "https://github.com/x402-rs/x402-rs"
homepage = "https://x402.rs"
documentation = "https://docs.rs/x402-reqwest"
keywords = ["axum", "middleware", "x402", "payments", "stablecoin"]
categories = [
    "web-programming::http-client",
    "authentication",
    "cryptography",
    "finance",
    "network-programming",
]
readme = "README.md"

[dependencies]
x402-rs = { workspace = true }
reqwest = { version = "0.12.20" }
http = { version = "1.3.1" }
reqwest-middleware = { version = "0.4.2" }
tokio = { version = "1.45.1" }
async-trait = { version = "0.1.88" }
rand = { version = "0.9.1" }
serde_json = { version = "1.0.140" }
thiserror = { version = "2.0.12" }

# Alloy
alloy-primitives.workspace = true
alloy-signer-local.workspace = true
alloy-signer.workspace = true
alloy-sol-types.workspace = true

# Solana
solana-rpc-client.workspace = true
solana-rpc-client-api.workspace = true
solana-compute-budget-interface.workspace = true
solana-instruction.workspace = true
solana-hash.workspace = true
solana-program-pack.workspace = true
solana-message.workspace = true
solana-pubkey.workspace = true
solana-signature.workspace = true
solana-keypair.workspace = true
solana-signer.workspace = true
solana-transaction.workspace = true
spl-token-interface.workspace = true
spl-token-2022-interface.workspace = true
spl-associated-token-account-interface.workspace = true
bincode.workspace = true

# Telemetry
tracing = { version = "0.1.41" }

[features]
telemetry = ["x402-rs/telemetry"]
