[package]
name = "x402-rs"
version = "0.9.2"
authors = ["Sergey Ukustov <sergey@ukstv.me>"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/x402-rs/x402-rs"
description = "x402 payments in Rust: verify, settle, and monitor payments over HTTP 402 flows"
readme = "README.md"
homepage = "https://x402.rs"
documentation = "https://docs.rs/x402-rs"
keywords = ["blockchain", "payments", "x402", "stablecoin", "http-402"]
categories = ["cryptography", "finance", "network-programming", "web-programming::http-server"]

[dependencies]
axum = { version = "0.8.4" }
tokio = { version = "1.45.0", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["rt"] }
dotenvy = { version = "0.15.7" }
serde_json = { version = "1.0.140" }
tower-http = { version = "0.6.3", features = ["trace", "cors"] }
serde = { version = "1.0.219", features = ["derive"] }
once_cell = { version = "1.21.3" }
regex = { version = "1.11.1" }
url = { version = "2.5.4", features = ["serde"] }
thiserror = { version = "2.0.12" }
base64 = { version = "0.22.1" }
rust_decimal = { version = "1.37.1" }
async-trait = { version = "0.1.88" }
dashmap = { version = "6.1.0" }

# Alloy
alloy-provider.workspace = true
alloy-primitives.workspace = true
alloy-rpc-client.workspace = true
alloy-rpc-types.workspace = true
alloy-network.workspace = true
alloy-contract.workspace = true
alloy-sol-types.workspace = true
alloy-dyn-abi.workspace = true
alloy-signer-local.workspace = true
alloy-transport.workspace = true

# Solana
solana-pubkey.workspace = true
solana-keypair.workspace = true
solana-signature.workspace = true
solana-message.workspace = true
solana-signer.workspace  = true
solana-transaction.workspace = true
solana-commitment-config.workspace = true
solana-compute-budget-interface.workspace = true
spl-token-interface.workspace = true
spl-token-2022-interface.workspace = true
solana-rpc-client.workspace = true
solana-rpc-client-api.workspace = true
bincode.workspace = true
bs58.workspace = true

# Tracing and OpenTelemetry
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
opentelemetry = { version = "0.30.0" }
opentelemetry_sdk = { version = "0.30.0" }
opentelemetry-semantic-conventions = { version = "0.30.0", features = ["semconv_experimental"] }
tracing-core = { version = "0.1.34" }
tracing-opentelemetry = { version = "0.31.0" }
opentelemetry-otlp = { version = "0.30.0", features = ["metrics", "grpc-tonic"] }
opentelemetry-stdout = { version = "0.30.0", features = ["trace", "metrics"] }

[features]
telemetry = []
