[package]
name = "x402-reqwest-example"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
x402-reqwest = { workspace = true }
x402-rs = { workspace = true }
alloy = { version = "1.0.12" }
reqwest = { version = "0.12.20" }
tokio = { version = "1.45.1" }
dotenvy = { version = "0.15.7" }
solana-keypair.workspace = true
solana-rpc-client.workspace = true
